--- a/src/Pages/CSS/Profile.css
+++ b/src/Pages/CSS/Profile.css
@@ -93,7 +93,7 @@
     height: 70px;
     /* Change the color of the text */
     color: #ffffff;
-    background: linear-gradient(90deg, #002980 0%, #0049BA 100%);
+    background: linear-gradient(90deg, #000000 0%, #130F40 100%);
     transition: all 0.3s ease; /* Smooth transition */
 }
 
@@ -373,7 +373,7 @@
     
     .mobile-sidebar ul {
         border: 1px solid #ffffff77;
-        background:linear-gradient(90deg, #002980 0%, #0049BA 100%);
+        background: linear-gradient(90deg, #000000 0%, #130F40 100%);
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
         border-radius: 20px;
         display: grid;
