--- a/src/Components/UserProfile/UserProfile.css
+++ b/src/Components/UserProfile/UserProfile.css
@@ -25,12 +25,16 @@
     /*make the bg colour fade away from left*/
     /* background: linear-gradient(90deg,#002980 0%, #0049BA 100%); */
     /* add another color to the gradient */
-    width: 100%;
-    color: #000000; /* White text color */
+    padding: 30px;
+    height: 120px;
+    width: 110%;
+    margin-top: -40px;
+    background: linear-gradient(90deg, #000000 0%, #130F40 100%); /* Gradient background with an additional color */
+    color: #FFFFFF; /* Corrected text color to white */
     font-size: 40px;
     font-weight: bold;
     text-align: center;
-    border-radius: 20px 0 20px 20px; /* Rounded corners on the top */
+    border-radius: 20px 10px 0 0; /* Rounded corners on the top */
     /* display: flex; */
 }
 
