--- a/src/Components/Assets/Navbar/Navbar.css
+++ b/src/Components/Assets/Navbar/Navbar.css
@@ -193,10 +193,10 @@ body {
   align-items: center;
   border-radius: 11px;
   font-size: 13px;
-  background: hsl(254, 100%, 35%);
+  background: hsl(0, 0%, 2%);
   color: white;
-  margin-left: -32px;
-  margin-top: -32px;
+  margin-left: -30px;
+  margin-top: -30px;
 }
 
 .nav-divider hr {
@@ -434,7 +434,7 @@ body {
     position: relative;
   }
 
-  .cart-mobile img {
+  .cart-mobile svg {
     height: 25px;
     width: 25px;
     margin-right: -10px;
@@ -720,9 +720,9 @@ body {
 
 .sliding-search-bar button{
   padding: 8px 16px;
-  border: 1px solid #0049BA;
+  border: 1px solid #000000;
   border-radius: 20px; /* Makes the corners rounded */
-  background: linear-gradient(90deg, #002980 0%, #0049BA 100%);
+  background: linear-gradient(90deg, #000000 0%, #130F40 100%);
   color: #ffffff;
   font-size: 12px;
   cursor: pointer;
