--- a/src/Components/ProductDisplay/ProductDisplay.css
+++ b/src/Components/ProductDisplay/ProductDisplay.css
@@ -119,6 +119,7 @@
 }
 .productdisplay-right-sizes{
     display: flex;
+    /* grid-template-columns: repeat(4, 1fr); */
     margin: 15px 0px;
     gap: 20px;
     margin-top: 15px;
@@ -254,12 +255,41 @@
 .unavailable-button {
     filter: grayscale(100%);
 }
+@media (max-width: 1224px){
+    .productdisplay-right-sizes{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        margin: 15px 0px;
+        gap: 20px;
+        margin-top: 15px;
+    }
+}
   
 
 @media (max-width: 1024px) {
+    .productdisplay-left{
+        display: flex;
+        flex-direction: column;
+        top: 0px;
+    }
+    .productdisplay-right{
+        scale: 0.6;
+    }
+    .productdisplay-right h1 {
+        font-size: 30px;
+    }
+    .productdisplay-right-sizes{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        margin: 15px 0px;
+        gap: 20px;
+        margin-top: 15px;
+    }
     .productdisplay {
         scale: 1;
         gap: 15px;
+        margin-top: -50px;
+        margin-bottom: -100px;
     }
 
     .productdisplay-right-description{
@@ -280,21 +310,110 @@
 
 /* Tablet view */
 @media (max-width: 768px) {
+    .productdisplay-left{
+        display: flex;
+        flex-direction: column;
+        top: 0px;
+    }
+    .productdisplay-right{
+        scale: 0.5;
+    }
+    .productdisplay-right h1 {
+        font-size: 30px;
+    }
+    .productdisplay-right-sizes{
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        margin: 15px 0px;
+        gap: 20px;
+        margin-top: 15px;
+    }
     .productdisplay {
         margin-left: 5%;
         margin-right: 5%;
-        gap: 20px;
+        gap: 0px;
+        margin-top: -150px;
+        margin-bottom: -130px;
     }
     .productdisplay-main-img {
         width: 450px;
         height: 550px;
     }
-    .productdisplay-right{
+    /* .productdisplay-right{
         scale:0.8;
+    } */
+    /* .productdisplay-right h1 {
+        font-size: 32px;
+    } */
+    .productdisplay-right-prices {
+        font-size: 18px;
+        gap: 20px;
+    }
+    .productdisplay-right-star {
+        font-size: 14px;
+    }
+    .productdisplay-right-colors button,
+    .productdisplay-right-sizes button {
+        height: 50px;
+        padding: 12px 16px;
+        box-shadow: 0px 0px 10px 0px #1c1c1c3f;
+    }
+    .productdisplay-right-addtoCart button {
+        height: 50px;
+    }
+
+    .productdisplay-right-description{
+        text-align: justify;
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+
+    .productdisplay-right-description button{
+        width: 15%;
+        border: none;
+        background: none;
+        color: #000000;
+        font-weight: 600;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 560px) {
+    .productdisplay-left{
+        display: flex;
+        flex-direction: column;
+        top: 0px;
+    }
+    .productdisplay-right{
+        scale: 0.5;
     }
     .productdisplay-right h1 {
-        font-size: 32px;
+        font-size: 30px;
     }
+    .productdisplay-right-sizes{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        margin: 15px 0px;
+        gap: 20px;
+        margin-top: 15px;
+    }
+    .productdisplay {
+        margin-left: 5%;
+        margin-right: 5%;
+        gap: 0px;
+        margin-top: -150px;
+        margin-bottom: -130px;
+    }
+    .productdisplay-main-img {
+        width: 450px;
+        height: 550px;
+    }
+    /* .productdisplay-right{
+        scale:0.8;
+    } */
+    /* .productdisplay-right h1 {
+        font-size: 32px;
+    } */
     .productdisplay-right-prices {
         font-size: 18px;
         gap: 20px;
