--- a/src/Components/SpecialComboPacks/SpecialComboPacks.css
+++ b/src/Components/SpecialComboPacks/SpecialComboPacks.css
@@ -1,7 +1,7 @@
 /* Main styles */
 .shop-category-banner-mobile {
-    width: 60vh;
-    height: 40vh;
+    width: 400px;
+    height: 450px;
     margin: 20px auto 0 auto;
     /* display: flex; */
     align-items: center;
