--- a/src/Components/Assets/Navbar/Navbar.css
+++ b/src/Components/Assets/Navbar/Navbar.css
@@ -489,7 +489,7 @@ body {
     position: fixed;
     left: 0;
     transform: translateY(100%);
-    background: rgba(255, 255, 255, 0.466);
+    background: rgba(255, 255, 255, 0.85);
     backdrop-filter: blur(10px);
     box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(0, 0, 0, 0.533);
@@ -742,7 +742,29 @@ body {
 }
 }
 
+.overlay-show {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vw;
+  background: rgba(0, 0, 0, 0);
+  z-index: 999;
+  cursor: pointer; 
+}
+
 @media (max-width: 480px) {
+  .overlay-show {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vw;
+    background: rgba(0, 0, 0, 0);
+    z-index: 999;
+    cursor: pointer; 
+  }
+  
   .navbar {
     position: relative;
     top:-55px;
