--- a/src/Components/Assets/Navbar/Navbar.css
+++ b/src/Components/Assets/Navbar/Navbar.css
@@ -454,7 +454,7 @@ body {
     align-items: center;
     border-radius: 50%;
     font-size: 10px;
-    background: hsl(254, 100%, 35%);
+    background: black;
     color: white;
   }
 
@@ -489,7 +489,7 @@ body {
     position: fixed;
     left: 0;
     transform: translateY(100%);
-    background: rgba(255, 255, 255, 0.85);
+    background: rgba(255, 255, 255, 0.9);
     backdrop-filter: blur(10px);
     box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(0, 0, 0, 0.533);
