--- a/src/Pages/CSS/ShopCategory.css
+++ b/src/Pages/CSS/ShopCategory.css
@@ -165,6 +165,10 @@
 /* Small Mobile styles */
 @media (max-width: 480px) {
 
+    .shop-category {
+        margin-top: -10px;
+    }
+
     .shop-category-banner-mobile {
         display: block;
     }
