--- a/src/Components/NewCollection/NewCollections.css
+++ b/src/Components/NewCollection/NewCollections.css
@@ -6,6 +6,7 @@
     /* padding: 10px; */
     margin-bottom: 100px;
     /* margin-top: 250px; */
+    margin-top: 70px;
     margin-left: 10%;
     margin-right: 10%;
   }
@@ -352,7 +353,7 @@
   .newcollection {
     /* padding: 10px; */
     margin-bottom: 100px;
-    /* margin-top: 250px; */
+    margin-top: 50px;
     margin-left: 5%;
     margin-right: 5%;
   }
