--- a/src/Components/ThankYou/ThankYou.css
+++ b/src/Components/ThankYou/ThankYou.css
@@ -48,6 +48,8 @@
     cursor: pointer;
     font-size: 1em;
     transition: background-color 0.3s;
+    margin-bottom: 10px;
+    width: 60%;
   }
   
   .greeting button:hover {
@@ -128,6 +130,9 @@
   
   /* Mobile */
   @media (max-width: 480px) {
+    .greeting button {
+      width: 70%;
+    }
     .greeting {
       padding: 20px;
       padding-left: 50px;
@@ -166,5 +171,11 @@
   
     .thank-you > p {
       font-size: 0.8em;
+    }
+  }
+
+  @media (max-width: 380px) {
+    .greeting button {
+      width: 100%;
     }
   }
