--- a/src/Components/OrderConfirmation/OrderConfermation.css
+++ b/src/Components/OrderConfirmation/OrderConfermation.css
@@ -7,7 +7,10 @@
 
 @media (min-width: 600px) {
 
-    
+    .banktransfer.active {
+        border: 3px solid #30e16b;
+        box-shadow: 0 2px 2px #30e16b;
+    }
     .topbar {
         display: none;
     }
@@ -217,7 +220,7 @@
         justify-content: center;
         width: 100%;
         gap: 20px;
-        padding: 10px 0;
+        padding: 0 0 10px 0;
         opacity: 0.2;
     }
 
@@ -745,9 +748,10 @@
         width: 100%;
         gap: 20px;
         padding: 5px 20px; /* Adjust padding as needed */
-        border-radius: 12px;
+        border-radius: 20px;
         border: 1px solid #00000056;
-        background: linear-gradient(90deg, #000000 0%, #130F40 100%);;
+        background: linear-gradient(90deg, #000000 0%, #130F40 100%);
+        margin-bottom: 10px;
     }
     
     .banktransfer p {
@@ -777,7 +781,7 @@
         width: 100%; /* Ensure full width */
         height: auto;
         gap: 20px;
-        padding: 10px 0; /* Adjust padding as needed */
+        padding: 0 0 10px 0; /* Adjust padding as needed */
         opacity: 0.2;
     }
 
@@ -1149,10 +1153,10 @@
 @media (min-width: 600px) {
     .desktoponly {
         display: grid;
-        grid-template-columns: 1.8fr 1fr;
-        gap: 30px;
-        margin-left: 2%;
-        margin-right: 2%;
+        grid-template-columns: 1.2fr 1fr;
+        gap: 20px;
+        margin-left: 0%;
+        margin-right: 0%;
         margin-bottom: 200px;
     }
     .desktop-only-header{
@@ -1317,6 +1321,17 @@
         border-radius: 15px;
         padding: 5%;
     }
+    .accnumber p {
+        font-size: 16px;
+        font-weight: 400;
+        margin-top: 0px;
+        white-space: nowrap;
+        color: rgb(0, 0, 0);
+        padding: 2px 2px;
+        padding-left: 0px;
+        white-space: wrap;
+    
+    }
 
 
 }
@@ -1399,11 +1414,11 @@
             align-items: center;
             justify-content: center;
             width: 100%;
-            height:100px;
+            height:90px;
             gap: 20px;
-            padding: 10px 0;
-            opacity: 0.1;
-            filter: grayscale(100%);
+            padding: 0 0 10px 0;
+            /* opacity: 0.1; */
+            /* filter: grayscale(100%); */
         }
 
         .banktransfer {
