--- a/src/Components/OrderConfirmation/OrderConfermation.css
+++ b/src/Components/OrderConfirmation/OrderConfermation.css
@@ -2,10 +2,15 @@
 .orderconfirmation-sizes .productname ul li {
     word-break: break-word; 
     white-space: normal;
+    list-style: none;
 }
 
 
 @media (min-width: 600px) {
+
+    .orderconfirmation-first-item-total li {
+        list-style: none;
+    }
 
     .banktransfer.active {
         border: 3px solid #30e16b;
@@ -196,6 +201,7 @@
         border-radius: 12px;
         border: 1px solid #00000056;
         background: linear-gradient(90deg, #000000 0%, #130F40 100%);
+        cursor: pointer;
     }
 
     .banktransfer p {
@@ -752,6 +758,7 @@
         border: 1px solid #00000056;
         background: linear-gradient(90deg, #000000 0%, #130F40 100%);
         margin-bottom: 10px;
+        cursor: pointer;
     }
     
     .banktransfer p {
@@ -1030,6 +1037,10 @@
         font-weight: 700;
         font-size: 23px;
     }
+
+    .orderconfirmation-first-item-total li {
+        list-style: none;
+    }
     
 
     .orderconfirmation-third {
@@ -1064,17 +1075,17 @@
     .pickup-method label {
         font-size: 13px;
         margin: 20px;
-        margin-top: -20px;
+        /* margin-top: -20px; */
         align-items: center;
-        margin-bottom: 10px;
-        opacity: 0.4;
+        margin-bottom: 5px;
+        opacity: 1;
         /* cursor: pointer; */
         position: relative;
         padding-left: 30px; /* Space for the custom radio */
     }
     
     .pickup-method input[type="radio"] {
-        display: none; /* Hide the default radio button */
+        display: none;
     }
     
     .pickup-method label::before {
@@ -1133,6 +1144,9 @@
     .orderconfirmation-first-item-total p {
         font-size: 25px;
         gap:40px;
+    }
+    .orderconfirmation-first-item-total li {
+        list-style: none;
     }
 
     .orderconfirmation-itemfield input {
@@ -1204,7 +1218,7 @@
         align-items: center;
     }
 
-    .pickup-method{
+    .pickup-method {
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -1212,21 +1226,30 @@
         border: 1px solid #00000056;
         border-radius: 20px;
     }
-
-    .pickup-method label {
+    
+    .pickup-method p {
+        margin-bottom: 20px; /* Adjust as needed */
         font-size: 16px;
+        font-weight: 600;
+        margin-right: auto;
+        padding: 20px;
+        
+    }
+    
+    .pickup-method label {
+        font-size: 13px;
         margin: 20px;
         margin-top: -20px;
         align-items: center;
         margin-bottom: 10px;
-        opacity: 0.4;
-        /* cursor: pointer; */
+        opacity: 1;
+        cursor: pointer;
         position: relative;
         padding-left: 30px; /* Space for the custom radio */
     }
     
     .pickup-method input[type="radio"] {
-        display: none; /* Hide the default radio button */
+        display: none;
     }
     
     .pickup-method label::before {
@@ -1260,9 +1283,14 @@
         top: 50%;
         left: 9px;
         transform: translate(-50%, -50%);
-        opacity: 1;
+        opacity: 0;
         transition: opacity 0.3s ease;
         z-index: 1;
+    }
+    
+    .pickup-method input[type="radio"]:checked + label::after {
+        opacity: 1;
+        /* still i cant see the dots when clicked */
     }
 
     .confirm{
@@ -1432,6 +1460,7 @@
             border-radius: 12px;
             border: 1px solid #00000056;
             background: linear-gradient(90deg, #000000 0%, #130F40 100%);
+            cursor: pointer;
         }
 
         .banktransfer p {
@@ -1491,7 +1520,7 @@
             display: inline-block;
         }
 
-        .pickup-method{
+        .pickup-method {
             display: flex;
             flex-direction: column;
             gap: 20px;
@@ -1499,7 +1528,6 @@
             border: 1px solid #00000056;
             border-radius: 20px;
         }
-
         
         .pickup-method p {
             margin-bottom: 20px; /* Adjust as needed */
@@ -1511,19 +1539,19 @@
         }
         
         .pickup-method label {
-            font-size: 16px;
+            font-size: 13px;
             margin: 20px;
             margin-top: -20px;
             align-items: center;
             margin-bottom: 10px;
-            opacity: 0.4;
-            /* cursor: pointer; */
+            opacity: 1;
+            cursor: pointer;
             position: relative;
             padding-left: 30px; /* Space for the custom radio */
         }
         
         .pickup-method input[type="radio"] {
-            display: none; /* Hide the default radio button */
+            display: none;
         }
         
         .pickup-method label::before {
@@ -1557,9 +1585,14 @@
             top: 50%;
             left: 9px;
             transform: translate(-50%, -50%);
-            opacity: 1;
+            opacity: 0;
             transition: opacity 0.3s ease;
             z-index: 1;
+        }
+        
+        .pickup-method input[type="radio"]:checked + label::after {
+            opacity: 1;
+            /* still i cant see the dots when clicked */
         }
 
         .desktoponly-right .orderconfirmation-details {
