--- a/src/Components/OrderConfirmation/OrderConfermation.css
+++ b/src/Components/OrderConfirmation/OrderConfermation.css
@@ -8,8 +8,15 @@
 
 @media (min-width: 600px) {
 
+    .banktransfer img{
+        height: 57px;
+        width: 75px;
+        border-radius: 15px;
+    }
+
     .orderconfirmation-first-item-total li {
         list-style: none;
+        font-weight: 700;
     }
 
     .banktransfer.active {
@@ -468,6 +475,28 @@
 /* Small Mobile styles */
 @media (max-width: 600px) {
 
+    .banktransfer img{
+        height: 57px;
+        width: 75px;
+        border-radius: 15px;
+    }
+    .methodname{
+        display: flex;
+        flex-direction: column;
+        /* margin: 0; */
+        /* white-space: nowrap; */
+        color: white;
+        padding: 0;
+        /* padding: 10px 10px;
+        padding-left: 0px; */
+        margin-top: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+    .methodname span{
+        font-weight: 500;
+    }
+
     .confirm-desktop-only {
         display: none; /* Hide by default */
     }
@@ -750,7 +779,7 @@
         display: flex;
         flex-direction: row;
         align-items: center; /* Center items vertically */
-        justify-content: space-between; /* Adjust as needed */
+        justify-content: space-between;
         width: 100%;
         gap: 20px;
         padding: 5px 20px; /* Adjust padding as needed */
@@ -759,6 +788,7 @@
         background: linear-gradient(90deg, #000000 0%, #130F40 100%);
         margin-bottom: 10px;
         cursor: pointer;
+        height: 67px;
     }
     
     .banktransfer p {
@@ -1040,6 +1070,7 @@
 
     .orderconfirmation-first-item-total li {
         list-style: none;
+        font-weight: 700;
     }
     
 
@@ -1147,6 +1178,7 @@
     }
     .orderconfirmation-first-item-total li {
         list-style: none;
+        font-weight: 700;
     }
 
     .orderconfirmation-itemfield input {
@@ -1773,5 +1805,64 @@
         width: 110%;
         margin-left: -5%;
         margin-right: -3%;
+    }
+}
+
+@media (max-width: 360px) and (min-width: 320px) {
+    .orderconfirmation-billinput {
+        border: 1px solid #00000056;
+        border-radius: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column; 
+        white-space: nowrap;
+        padding: 10px;
+        width: 110%;
+        margin-left: -5%;
+        margin-right: -3%;
+        margin-bottom: 30px;
+    }
+    .orderconfirmation-third {
+        border: 1px solid #00000056;
+        border-radius: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column;
+        white-space: nowrap;
+        padding: 10px;
+        width: 110%;
+        margin-left: -5%;
+        margin-right: -3%;
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        margin-bottom: 20px;
+    }
+
+    .banktransfer img{
+        height: 47px;
+        width: 45px;
+        border-radius: 15px;
+        margin-left: -20px;
+    }
+    .methodname{
+        display: flex;
+        flex-direction: column;
+        /* margin: 0; */
+        /* white-space: nowrap; */
+        color: white;
+        padding: 0;
+        /* padding: 10px 10px;
+        padding-left: 0px; */
+        margin-top: 8px;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px;
     }
 }
