fixed font sizes

--- a/src/Components/UniFundRaising/UniFundRaising.css
+++ b/src/Components/UniFundRaising/UniFundRaising.css
@@ -305,6 +305,22 @@ hr {
     .progressbar-values {
         margin-left: 5%;
         margin-right: 5%;
+        font-size: 12px;
+        font-weight: 700;
+    }
+
+    .progressbar-values-left {
+        color: #fefefe;
+        border: 1px solid #ffffff38;
+        border-radius: 10px;
+        padding: 10px;
+    }
+    
+    .progressbar-values-right {
+        color: #fefefe;
+        border: 1px solid #ffffff38;
+        border-radius: 10px;
+        padding: 10px;
     }
 
     .leftbankdetails {
@@ -351,7 +367,22 @@ hr {
     .progressbar-values {
         margin-left: 5%;
         margin-right: 5%;
-        font-size: 12px;
+        font-size: 10px;
+        font-weight: 700;
+    }
+
+    .progressbar-values-left {
+        color: #fefefe;
+        border: 1px solid #ffffff38;
+        border-radius: 10px;
+        padding: 10px;;
+    }
+    
+    .progressbar-values-right {
+        color: #fefefe;
+        border: 1px solid #ffffff38;
+        border-radius: 10px;
+        padding: 10px;
     }
 
     .leftbankdetails {
