--- a/src/Components/Assets/Navbar/Navbar.css
+++ b/src/Components/Assets/Navbar/Navbar.css
@@ -3,11 +3,11 @@
 body {
   padding-top: 120px; /* Adjust as needed to create space for the navbar */
 }
-@media (min-width: 480px) {
+/* @media (min-width: 480px) {
 hr {
   display:none;
 }
-}
+} */
 
 .navbar {
   position: fixed;
