--- a/src/Components/Popular/Popular.css
+++ b/src/Components/Popular/Popular.css
@@ -36,7 +36,7 @@
 
 
 .popular-item{
-    padding-left: 30px;
+    /* padding-left: 30px; */
     margin-top: -20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -78,8 +78,14 @@
     margin-top: -30px;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 50px;
-    scale: 0.9;
+    scale: 1;
 }
+}
+
+@media (max-width: 900px) {
+  .popular-item {
+      scale: 0.9;
+  }
 }
 
 /* Mobile Version */
