--- a/src/Components/CartItems/CartItems.css
+++ b/src/Components/CartItems/CartItems.css
@@ -208,10 +208,24 @@
         margin-bottom: 30px;
     }
     .carticon-product-icon {
-        height: 220px;
-        width: 170px;
+        height: 160px;
+        width: 110px;
         border-radius: 8px;
+        margin-top: 20px;
         /* justify-self: center; Align the product image center */
+    }
+    .cartitems-quantity {
+        display: inline-block;
+        width: 30px; /* Adjust width as needed */
+        height: 30px; /* Adjust height as needed */
+        background-color: #f5f5f5;
+        border: 1px solid #ccc;
+        border-radius: 15px;
+        text-align: center;
+        line-height: 30px;
+        font-size: 10px;
+        color: #000000;
+        margin-left: 5px; /* Adjust spacing as needed */
     }
 }
 
@@ -242,6 +256,22 @@
     }
     .carticon-product-icon {
         margin-bottom: 18px;
+        height: 150px;
+        width: 120px;
+    }
+
+    .cartitems-quantity {
+        display: inline-block;
+        width: 30px; /* Adjust width as needed */
+        height: 30px; /* Adjust height as needed */
+        background-color: #f5f5f5;
+        border: 1px solid #ccc;
+        border-radius: 15px;
+        text-align: center;
+        line-height: 30px;
+        font-size: 10px;
+        color: #000000;
+        margin-left: 5px; /* Adjust spacing as needed */
     }
 }
 
