--- a/src/Components/SpecialComboPacks/SpecialComboPacks.css
+++ b/src/Components/SpecialComboPacks/SpecialComboPacks.css
@@ -1,7 +1,7 @@
 /* Main styles */
 .shop-category-banner-mobile {
     width: 400px;
-    height: 450px;
+    height: 400px;
     margin: 20px auto 0 auto;
     /* display: flex; */
     align-items: center;
@@ -54,7 +54,9 @@
 
 @media (max-width: 768px) {
     .shop-category-banner-mobile {
-        width: 70%;
+        /* width: 70%; */
+        width: 380px;
+    height: 380px;
     }
 
     .home-ad {
@@ -79,7 +81,8 @@
 
 @media (max-width: 480px) {
     .shop-category-banner-mobile {
-        width: 90%;
+        width: 300px;
+        height: 300px;
     }
 
     .home-ad {
