--- a/src/Components/NewCollectionTrue/NewCollectionTrue.css
+++ b/src/Components/NewCollectionTrue/NewCollectionTrue.css
@@ -124,6 +124,7 @@
     .newcollections1 {
         position: relative;
         margin-top: 0px;
+        margin-top: 100px;
     }
   
     .newcollections1 h1 {
