--- a/src/Components/Notification/Notification.css
+++ b/src/Components/Notification/Notification.css
@@ -115,8 +115,9 @@
     }
 
     .notification-header {
+        margin-top: 20px;
         padding: 15px;
-        height: 60px;
+        height: 80px;
         font-size: 24px;
     }
 
