--- a/src/Components/OrderConfirmation/OrderConfermation.css
+++ b/src/Components/OrderConfirmation/OrderConfermation.css
@@ -1078,9 +1078,9 @@
         border: 1px solid #00000056;
         border-radius: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        display: flex;
-        flex-direction: column; /* Change to column for full-width alignment */
-        white-space: nowrap;
+        /* display: flex;
+        flex-direction: column;
+        white-space: nowrap; */
         padding: 10px;
         width: 100%;
     }
@@ -1798,9 +1798,9 @@
         border: 1px solid #00000056;
         border-radius: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        display: flex;
-        flex-direction: column; /* Change to column for full-width alignment */
-        white-space: nowrap;
+        /* display: flex;
+        flex-direction: column;
+        white-space: nowrap; */
         padding: 10px;
         width: 110%;
         margin-left: -5%;
@@ -1826,9 +1826,9 @@
         border: 1px solid #00000056;
         border-radius: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        display: flex;
+        /* display: flex;
         flex-direction: column;
-        white-space: nowrap;
+        white-space: nowrap; */
         padding: 10px;
         width: 110%;
         margin-left: -5%;
