--- a/src/Components/UniFundRaising/UniFundRaising.css
+++ b/src/Components/UniFundRaising/UniFundRaising.css
@@ -104,7 +104,8 @@
     }
 }
 .progressbar-values {
-    display: flex;
+    /* display: flex; */
+    display: none;
     justify-content: space-between;
     margin-left: 15%;
     margin-right: 15%;
@@ -156,7 +157,8 @@
 }
 .accandpara {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr; */
+    grid-template-columns: ifr;
     margin-left: 15%;
     margin-right: 15%;
     gap:20px;
@@ -186,7 +188,7 @@
     border-radius: 25px;
     font-size: 24px;
     font-family: 'Koulen';
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     text-align: center;
     cursor: pointer;
 }
@@ -218,10 +220,15 @@
     font-family: 'Poppins';
     font-size: 14px;
     color: white;
-    text-align: left;
+    /* text-align: left; */
+    text-align: justify;
+    text-align: center;
+    margin-bottom: 20px;
+
 }
 
 .para1 {
+    display: none;
     margin-top: 50px;
     margin-bottom: 50px;
     font-family: 'League Spartan', sans-serif;
@@ -245,6 +252,7 @@
     padding-bottom: 10px;
 }
 .para2 {
+    display: none;
     margin-top: 50px;
     margin-bottom: 50px;
     font-family: 'League Spartan', sans-serif;
@@ -324,13 +332,16 @@
     text-align: center;
     padding-top: 30px;
 }
+.left {
+    display: none;
+}
 
 @media (min-width: 1224px) {
     .left p {
         font-size: 18px;
     }
     .right p{
-        font-size: 15px;
+        font-size: 20px;
     }
     .leftbankdetails {
         width: 100%;
