--- a/src/Components/ProductDisplay/ProductDisplay.css
+++ b/src/Components/ProductDisplay/ProductDisplay.css
@@ -120,8 +120,10 @@
     font-weight: 450;
 }
 .productdisplay-right-sizes{
-    display: flex;
+    /* display: flex; */
     /* grid-template-columns: repeat(4, 1fr); */
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
     margin: 15px 0px;
     gap: 20px;
     margin-top: 15px;
@@ -130,7 +132,7 @@
 .productdisplay-right-sizes button{
     height: 50px;
     width: 50px;
-    padding: 18px 24px;
+    /* padding: 18px 24px; */
     background: #fbfbfb;
     border: 1px solid #b3b3b3;
     box-shadow: 0px 0px 10px 0px #1c1c1c3f;
@@ -274,7 +276,7 @@
     .productdisplay-right-sizes button{
         height: 40px;
         width: 40px;
-        padding: 14px 20px;
+        /* padding: 14px 20px; */
         background: #fbfbfb;
         border: 1px solid #b3b3b3;
         box-shadow: 0px 0px 10px 0px #1c1c1c3f;
@@ -358,7 +360,7 @@
     .productdisplay-right-sizes button{
         height: 30px;
         width: 30px;
-        padding: 12px 18px;
+        /* padding: 12px 18px; */
         font-size: 12px;
         font-weight: 500;
     }
@@ -411,7 +413,7 @@
     .productdisplay-right-colors button,
     .productdisplay-right-sizes button {
         height: 35px;
-        padding: 12px 16px;
+        /* padding: 12px 16px; */
         box-shadow: 0px 0px 10px 0px #1c1c1c3f;
     }
     .productdisplay-right-addtoCart button {
@@ -477,8 +479,7 @@
     .productdisplay-right-star {
         font-size: 14px;
     }
-    .productdisplay-right-colors button,
-    .productdisplay-right-sizes button {
+    .productdisplay-right-colors button {
         height: 35px;
         padding: 12px 16px;
         box-shadow: 0px 0px 10px 0px #1c1c1c3f;
@@ -556,7 +557,7 @@
 
     .productdisplay-right-sizes button {
       height: 40px;
-      padding: 8px 12px;
+      /* padding: 8px 12px; */
       border: 1px solid #b3b3b3;
     }
 
@@ -602,7 +603,7 @@
     .productdisplay-right-sizes button{
         height: 40px;
         width: 40px;
-        padding: 12px 18px;
+        /* padding: 12px 18px; */
         font-size: 12px;
         font-weight: 500;
     }
